basic functional interface
  - basic functional interface with two reactive boxes for messages from two
  different sources.
  - an editor text box to type text and perform operation on entered
  data.

--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,19 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- mtl # maybe not needed
+- text
+- bytestring
+- brick
+- vty
+- websockets
+- unordered-containers # maybe not needed
+- time
+- random # maybe not needed
+- optparse-generic
+- microlens
+- microlens-th
+- text-zipper
 
 library:
   source-dirs: src
